Update workspace settings to format json with deno

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,8 @@
   },
   "css.customData": [
     ".vscode/tailwind.json"
-  ]
+  ],
+  "[json]": {
+    "editor.defaultFormatter": "denoland.vscode-deno"
+  }
 }
