--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ${{ env.DENO_DIR }}
-          key: ${{ secrets.CACHE_VERSION }}-${{ hashFiles('deno.lock') }}
+          key: ${{ hashFiles('deno.lock') }}
     
   check:
     runs-on: ubuntu-latest
