--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -17,31 +17,18 @@ permissions:
 
 jobs:
   # ? Set DENO_DIR to an absolute or relative path on the runner.
-  # env:
+  env:
+    DENO_VERSION: v1.39.1
   #   DENO_DIR: my_cache_directory
-
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: denoland/setup-deno@v1
-        with:
-          deno-version: v1.39.1
-
-      - name: Cache Deno dependencies 
-        uses: actions/cache@v3
-        with:
-          path: ${{ env.DENO_DIR }}
-          key: ${{ hashFiles('deno.lock') }}
     
   check:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Setup repo
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
+    - uses: denoland/setup-deno@v1
+      with:
+        deno-version: ${{ env.DENO_VERSION }}
 
-    - name: Cache Deno dependencies 
       uses: actions/cache@v3
       with:
         path: ${{ env.DENO_DIR }}
@@ -55,12 +42,12 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Setup repo
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+      - uses: denoland/setup-deno@v1
+        with:
+          deno-version: ${{ env.DENO_VERSION }}
 
-      - name: Cache Deno dependencies 
         uses: actions/cache@v3
         with:
           path: ${{ env.DENO_DIR }}
