--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -31,7 +31,7 @@ jobs:
       with:
         deno-version: ${{ env.DENO_VERSION }}
 
-      uses: actions/cache@v3
+    - uses: actions/cache@v3
       with:
         path: ${{ env.DENO_DIR }}
         key: ${{ hashFiles('deno.lock') }}
@@ -50,7 +50,7 @@ jobs:
         with:
           deno-version: ${{ env.DENO_VERSION }}
 
-        uses: actions/cache@v3
+      - uses: actions/cache@v3
         with:
           path: ${{ env.DENO_DIR }}
           key: ${{ hashFiles('deno.lock') }}
