--- a/.github/workflows/slack_hook.yml
+++ b/.github/workflows/slack_hook.yml
@@ -17,4 +17,9 @@ jobs:
           webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
           webhook-type: incoming-webhook
           payload: |
-            text: "Greetings!"
+            text: "Status Update:"
+            blocks:
+                - type: "section"
+                  text:
+                    type: "mrkdwn"
+                    text: "${{ github.event.pusher.username }} just pushed"
