--- a/.github/workflows/slack_hook.yml
+++ b/.github/workflows/slack_hook.yml
@@ -22,4 +22,4 @@ jobs:
                 - type: "section"
                   text:
                     type: "mrkdwn"
-                    text: "${{ toJson(github.event.pusher.username) }} just pushed"
+                    text: "${{ toJson(github.event.sender.name) }} just pushed"
