--- a/.github/workflows/slack_hook.yml
+++ b/.github/workflows/slack_hook.yml
@@ -22,4 +22,4 @@ jobs:
                 - type: "section"
                   text:
                     type: "mrkdwn"
-                    text: "${{ github.event_name }} just occurred"
+                    text: "${{ github.event.pusher.name }} just pushed"
